# StopRightNow

./: .gitignore  CMakeLists.txt  MODULE.bazel  README.md
StopRightNow/: BUILD.bazel  CMakeLists.txt  StopRightNow.cpp  StopRightNow.h  main.cpp  main_linux.cpp  main_windows.cpp
windows/: StopRightNow [working, stable].c  StopRightNow-experimental.c
